# adv_mla_at2_14229898

./: .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py  sarima_model_downloaded.joblib
docs/: Makefile  conf.py  index.rst  make.bat
models/forecasting/: sarima_model.joblib
models/predictive/: cat_id_encoder.joblib  dept_id_encoder.joblib  item_id_encoder.joblib  state_id_encoder.joblib  store_id_encoder.joblib  xgb_model.joblib  xgb_model_reduce.joblib  xgb_model_reduce_week_number.joblib
notebooks/forecasting/: chingpayakmon_narongvat-14229898-forecasting_data_prep.ipynb  chingpayakmon_narongvat-14229898-forecasting_sarima.ipynb
notebooks/predictive/: chingpayakmon_narongavt-14229898-predictive_data_prep.ipynb  chingpayakmon_narongvat-14229898-predictive_xgboost_model.ipynb
reports/: chingpayakmon_narongvat-14229898-predictive_xgboost.ipynb  chingpayakmon_narongvat-14229898-predictive_xgboost_no_sales_histroical.ipynb
src/features/: data_prep.py
